--- a/lang/en/query.txt
+++ b/lang/en/query.txt
@@ -2,11 +2,13 @@
 Queries can be about pages, IP addresses, Countries, or Browser/User Agents. 
 
 ==== Rules ====
-The queries are governed by the dominant or **priority** field.  There are three basic rules:
-   - Country or User Agent priority with both fields set will match both fields.
-   - Any priority with country set will match the priority field plus the country.
-   - Page priority with both agent and country set will match all three fields.
+Queries are governed by the dominant or **priority** field.      
+   - Any priority with country set will match the priority field plus the country.              
+   - Page priority with both user agent and country set will match all three fields.
+   - IP queries (i.e. ip priority) ignore all other fields and if an IP is included in a query where another field has priority, the IP address is ignored.
 
+You can choose to ignore all fields other than the priority field and then only the priority field will be searched.  
+   
 ==== Searches ====
 The search functions are case-insensitive and will match partial strings as well as whole strings.  So, for instance, 
 if you search for ''wiki'' in the page search, it will return all pages which occur in the wiki namespace and any other pages
@@ -15,8 +17,7 @@ which include wiki in their names.
    - **UserAgent Search:**  This search is useful if a particular user agent does not show up on the drop-down menu. This can happen if a user agent string appears in a subversion but not in the major version string.  A successful search will add whatever is found to the top of the drop-down menu so that  you can then select it.   
    - **Country Search: **   If a country does not appear in the list of countries, this will add it to the list so that you can then select it.  If you enter a partial name, it will add all matches.  For instance, if you enter 'isl', you will add a whole list of countries that have Island in their names
    - ** Page:**  This will accept any whole or part of a page name and will return results for all matching values.     
-
- 
+  
  ==== Dates ====  
  Dates are all confined to months within the same year.   You can select multiple dates except for page priority.  However, the page
  field can be included in a mulit-date query where one of the other fields has priority.
