--- a/lang/en/general_intro.txt
+++ b/lang/en/general_intro.txt
@@ -1,8 +1,7 @@
-With this admin panel you can do three things. 
+With this admin panel you can do two things. 
     -  maintain the list of files which are currently using the quickstats syntax plugin, keeping it up-to-date;
     -  make specific queries based on country, ip address, and Dokuwiki page names; 
-    - download the Maxmind GeoLiteCity.dat database into ''lib/plugins/quickstats/GEOIP/''; for this work you must set the ''geoip_local'' option to true in the Configuration Manager.
 
 For the maintenance panel, click on the **Update Quickstats Cache** button.  For the Query panel, click on the **Query Data** button. 
 These are toggles and will both open and close their respective windows.  The **Query Info** button will re-open the Query Info panel which 
-is displayed on first opening the Query Data panel and which can be closed with a button at the bottom of the Query Info panel.  The **Download DB** button will attempt to download the Maxmind database.
+is displayed on first opening the Query Data panel and which can be closed with a button at the bottom of the Query Info panel.  
