--- a/lang/fr/query.txt
+++ b/lang/fr/query.txt
@@ -1,21 +1,21 @@
-===== requêtes =====
+===== Requêtes =====
 Les requêtes peuvent porter sur les pages, les IP, les pays, les navigateurs ou agents utilisateurs
 
 ==== Règles ====
 Les requêtes sont gouvernées par le champ dominant ou **prioritaire**.
   - Tout champ prioritaire associé avec un ensemble de pays correspondra au champ prioritaire plus le pays
-  - la priorité donné aux pages avec à la fois l'agent utilisateur et le pays sélectionnés correspondra aux trois champs
-  - les requêtes d'IP (i.e. IP prioritaire) ignorent les autres champs, et si lP est incluse dans une requête où un autre champ est prioritaire, alors l'adresse IP est ignorée.
+  - la priorité donnée aux pages avec à la fois l'agent utilisateur et le pays sélectionnés correspondra aux trois champs
+  - les requêtes d'IP (i.e. IP prioritaire) ignorent les autres champs, et si une lP est incluse dans une requête où un autre champ est prioritaire, alors l'adresse IP est ignorée.
 
-Vous pouvez choisir d'ignorer tous les champs autres que le champ prioritaire; et alors la requête ne portera que sur le champ prioritaire.
+Vous pouvez choisir d'ignorer tous les champs autres que le champ prioritaire ; et alors la requête ne portera que sur le champ prioritaire.
 
 ==== Recherche ====
 Les fonctions de recherche sont insensibles à la casse et correspondent à des chaînes partielles ou complètes. Donc, par exemple,
 Si vous cherchez "wiki" dans les pages, cela retournera toutes les pages qui se trouvent dans la catégorie wiki ainsi que toutes les pages qui contiennent "wiki" dans leur nom.
 
- - **Recherche d'agent utilisateur**: Cette recherche est utile si un agent utilisateur particulier ne se trouve pas dans la liste déroulante. Ceci peut se produire lorsqu'une chaîne d'agent utilisateur apparaît dans la chaîne d'une sousversion mais pas la celle de la version principale. Une recherche fructueuse ajoutera le résultat au sommet de la liste déroulante de telle sorte qu'il soit sélectionnable.
-  - *Recherche de pays**: Si un pays n'apparaît pas dans la liste des pays, ceci l'ajoutera à la liste déroulante de telle sorte qu'il soit sélectionnable. Si vous saisissez un nom partiel, cela ajoutera tous lespays contenant la saisie. Par exemple, si vous saisissez ''isl'' vous ajouterez la liste complète de tous les pays qui ont ''island'' dans leur nom
-  - ** Page:** nom complet ou partiel de page et retourne la liste de toutes les pages contentant la saisie dans leur nom.
+  - **Recherche d'agent utilisateur** :\\ Cette recherche est utile si un agent utilisateur particulier ne se trouve pas dans la liste déroulante. Ceci peut se produire si une chaîne d'agent utilisateur apparaît dans une chaine de sousversion mais pas dans celle de la version principale. Une recherche fructueuse ajoutera le résultat au sommet de la liste déroulante de telle sorte qu'il soit sélectionnable.
+  - **Recherche de pays** :\\ Si un pays n'apparaît pas dans la liste des pays, ceci l'ajoutera à la liste déroulante de telle sorte qu'il soit sélectionnable. Si vous saisissez un nom partiel, cela ajoutera tous les pays contenant la saisie. Par exemple, si vous saisissez ''isl'' vous ajouterez la liste complète de tous les pays qui ont ''island'' dans leur nom
+  - ** Page** :\\ nom complet ou partiel de page et retourne la liste de toutes les pages contentant la saisie dans leur nom.
 
 ==== Dates ====
 Les dates sont toutes confinées aux mois dans la même année. Vous pouvez sélectionner des dates multiples sauf pour la priorité de page. Cependant, le champ page peut être inclus dans une requête multidate où l'un des autres champs est prioritaire.
@@ -23,13 +23,13 @@ Les dates sont toutes confinées aux mois dans la même année. Vous pouvez sél
 ==== Affichage ====
 Les requêtes afficheront das tableaux avec les colonnes suivantes pour chacun des mois que vous sélectionnez dans le menu déroulant des mois :
 
-|<''IP''>|''Mois''|''Accès''|''Pages''|<''Pays''>|''Agent utilisateur''|''Termes recherchés''|''Catégories'|''noms des paramètres de requête''|''Valeur des paramètres de requête''|
+|<''IP''>|''Mois''|''Accès''|''Pages''|<''Pays''>|''Agent utilisateur''|''Termes recherchés''|''Catégories''|''noms des paramètres de requête''|''Valeur des paramètres de requête''|
 
 Lorsque vous interrogez une page, ces données seront affichées pour chaque adresse IP qui a accédé à la page. Cela peut parfois s'élever à des quantités considérables d'affichage, spécialement pour les adresses IP qui sont des robots d'indexation et ont accédé à de nombreuses pages sur votre wiki. La colonne page peut souvent avoir un grand nombre d'entrées. Par conséquent lorsque vous interrogez une page, vous avez l'option d'afficher un format ''bref'' avec les colonnes suivantes :
 
 |''Mois''|''Accès''|''Pays''|''Agent Utilisateur''|
 
-Dans le cas de l'affichage pour les requêtes de pages, il y a deux résultats pour **accès**. Celui qui apparaît dans l'entête en haut de l'affichage se réfère au nombre d'accès à la page interrogée. le champ accès dans la table se réfère au nombre de fois qu'une adresse IP a accédé au site.
+Dans le cas de l'affichage pour les requêtes de pages, il y a deux résultats d'**accès**. Celui qui apparaît dans l'entête en haut de l'affichage se réfère au nombre d'accès à la page interrogée. le champ accès dans la table se réfère au nombre de fois qu'une adresse IP a accédé au site.
 
 Les colonnes entre ''<'' et ''>'' n'apparaitront pas dans chaque table. La colonne ''Pays'' sera exclue des requêtes par pays. La colonne ''IP'' apparaîtra dans les tables avec priorité donnée à ''Agent Utilisateur'' et ''Pays''.
 
@@ -37,12 +37,14 @@ Les colonnes entre ''<'' et ''>'' n'apparaitront pas dans chaque table. La colon
 
 Il y a un menu déroulant des fichier qui utilisent actuellement la syntaxe //quickstats//. Vous pouvez cliquer dessus et les pages surgiront. Cela sert un but double :
 
-  - elles vous donnent un moyen pratique de vérifier les noms et IP que vous pourriez vouloir utiliser dans vos requêtes
+  - Ces pages vous donnent un moyen pratique de vérifier les noms et IP que vous pourriez vouloir utiliser dans vos requêtes
   - Elles vous permettent de conserver tout votre travail avec //quickstats// dans le panneau d'administration, vous offrant un accès immédiat à tout graphe que vous pouvez avoir créé avec la syntaxe //quickstats//.
 
-==== Temps d'Éxecution ====
+==== Temps d'Exécution ====
 
-Si votre requête dépasse le délai d'attente, un message d'expiration de délai s'affichera. Si votre serveur n'utilise pas le //safemode// de PHP, vous pouvez augmenter la durée maximale d'exécution avec le paramètre ''max_exec_time'' dans la section //quickstats// du gestionnaire de configuration. Cette option est réglée par défaut sur 60 secondes. Si votre serveur est réglé sur //safemode// mais que vous avez la possibilité de faire des changements dans ''php.ini'', alors vous pouvez régler la valeur de ''max_execution_time'' dans ''php.ini''. La valeur dans ''php.ini'' est habituellement 30 secondes.
+Si votre requête dépasse le délai d'attente, un message d'expiration de délai s'affichera. Si votre serveur n'utilise pas le //safemode// de PHP, vous pouvez augmenter la durée maximale d'exécution avec le paramètre ''max_exec_time'' dans la section //quickstats// du gestionnaire de configuration. Cette option est réglée par défaut sur 60 secondes. Si votre serveur est réglé sur //safemode// mais que vous avez la possibilité de faire des changements dans ''php.ini'', alors vous pouvez réinitialiser la valeur de ''max_execution_time'' dans ''php.ini''. La valeur dans ''php.ini'' est habituellement 30 secondes.
+
+Dans le cas de requêtes longues, l'icône de minuteur peut continuer à s'afficher après que le délai d'attente a expiré, mais le traitement a effectivement cessé et le résultat s'affichera éventuellement, indiquant que le délai d'attente a été dépassé.
 
 ----
 **Notes**
