--- a/lang/en/general_intro.txt
+++ b/lang/en/general_intro.txt
@@ -1,7 +1,7 @@
 With this admin panel you can do three things.
     -  maintain the list of files which are currently using the quickstats syntax plugin, keeping it up-to-date;
     -  make specific queries based on country, ip address, and Dokuwiki page names;
-    - download the Maxmind GeoLiteCity.dat database into ''lib/plugins/quickstats/GEOIP/''; for this work you must set the ''geoip_local'' option to true in the Configuration Manager.
+    - download the Maxmind GeoLite2-City database into ''quickstats/GEOIP/vendor/GeoLite2-City''; 
 
 For the maintenance panel, click on the **Update Quickstats Cache** button.  For the Query panel, click on the **Query Data** button.
 These are toggles and will both open and close their respective windows.  The **Query Info** button will re-open the Query Info panel which
